Try to work around what seems to be an iOS Safari bug of not wrapping a line.

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -35,6 +35,7 @@ html {
     white-space: pre-line;
     flex: 1 1 auto;
     padding: 1px;
+    overflow: hidden;
 }
 
 .Cursor {
